force-app/main/default/objects/EFT_Files__c/EFT_Files__c.object-meta.xml
<CustomObject>
    <label>EFT Files</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>EFT Files  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EFT Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>