force-app/main/default/objects/EFT_Files__c/fields/Allocated_Payments_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Payments_Amount__c</fullName>
    <description>Total Allocated Payment Amount</description>
    <inlineHelpText>Total Allocated Payment Amount</inlineHelpText>
    <label>Allocated Payments Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>