force-app/main/default/objects/EFT_Files__c/fields/Allocated_Payments_Count__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Payments_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Allocated Payments Count</description>
    <inlineHelpText>Allocated Payments Count</inlineHelpText>
    <label>Allocated Payments Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>