force-app/main/default/objects/EFT_Files__c/fields/Allocated_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Processing_Status__c</fullName>
    <description>Allocated Processing Status</description>
    <inlineHelpText>Allocated Processing Status</inlineHelpText>
    <label>Allocated Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>