force-app/main/default/objects/EFT_Files__c/fields/Insolvency_Account__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insolvency Account</label>
    <referenceTo>Insolvency_Account__c</referenceTo>
    <relationshipLabel>EFT Files</relationshipLabel>
    <relationshipName>EFT_Files</relationshipName>
    <type>Lookup</type>
</CustomField>