force-app/main/default/objects/EFT_Files__c/fields/JSON_String__c.field-meta.xml
<CustomField>
    <fullName>JSON_String__c</fullName>
    <description>JSON String of parsed file</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>JSON String</inlineHelpText>
    <label>JSON String</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>