force-app/main/default/objects/EFT_Files__c/fields/Posted_Payments_Count__c.field-meta.xml
<CustomField>
    <fullName>Posted_Payments_Count__c</fullName>
    <description>Posted Payments Count</description>
    <inlineHelpText>Posted Payments Count</inlineHelpText>
    <label>Posted Payments Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>