force-app/main/default/objects/EFT_Files__c/fields/Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Posting_Date__c</fullName>
    <description>Posting Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Posting Date</inlineHelpText>
    <label>Posting Date</label>
    <type>Date</type>
</CustomField>