force-app/main/default/objects/EFT_Files__c/fields/Product_Custom__c.field-meta.xml
<CustomField>
    <fullName>Product_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created for the development purpose to have in the EFTUtil Wrapper</description>
    <label>Product_Custom</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CCS_Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>EFT Files</relationshipLabel>
    <relationshipName>EFT_Files</relationshipName>
    <type>Lookup</type>
</CustomField>