force-app/main/default/objects/EFT_Files__c/fields/Short_URL__c.field-meta.xml
<CustomField>
    <fullName>Short_URL__c</fullName>
    <description>Short URL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Short URL</label>
    <type>Url</type>
</CustomField>