force-app/main/default/objects/EFT_Files__c/fields/Text_URL__c.field-meta.xml
<CustomField>
    <fullName>Text_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>