force-app/main/default/objects/EFT_Files__c/fields/Total_Payments_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_Amount__c</fullName>
    <description>Total Payments Amount</description>
    <inlineHelpText>Total Payments Amount</inlineHelpText>
    <label>Total Payments Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>