force-app/main/default/objects/EFT_Files__c/fields/Total_Posted_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Posted_Payments__c</fullName>
    <description>Total Posted Payments</description>
    <formula>Posted_Payments_Count__c + Allocated_Payments_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Posted Payments</inlineHelpText>
    <label>Total Posted Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>