force-app/main/default/objects/EFT_Files__c/fields/Total_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Record_Count__c</fullName>
    <description>Total records count is summation of Allocated + Unallocated Payments created</description>
    <label>Total Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>