force-app/main/default/objects/EFT_Files__c/fields/Unallocated_Payments_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Payments_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Unallocated Payment Amount</description>
    <inlineHelpText>Total Unallocated Payment Amount</inlineHelpText>
    <label>Unallocated Payments Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>