force-app/main/default/objects/EFT_Files__c/fields/Unallocated_Payments_count__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Payments_count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Unallocated Payments count</description>
    <inlineHelpText>Unallocated Payments count</inlineHelpText>
    <label>Unallocated Payments count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>