force-app/main/default/objects/EFT_Files__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <description>email of user uploading excel</description>
    <encryptionScheme>None</encryptionScheme>
    <label>User Email</label>
    <type>Email</type>
</CustomField>