force-app/main/default/objects/EFT_Files__c/recordTypes/CCS_EFT.recordType-meta.xml
<RecordType>
    <fullName>CCS_EFT</fullName>
    <active>true</active>
    <label>CCS EFT</label>
</RecordType>