force-app/main/default/objects/EFT_Files__c/recordTypes/Insolvency_EFT.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_EFT</fullName>
    <active>true</active>
    <label>Insolvency EFT</label>
</RecordType>