force-app/main/default/objects/EFT_Files__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cheque_Number__c</columns>
    <columns>Posting_Date__c</columns>
    <columns>Total_Payments_Amount__c</columns>
    <columns>Total_Record_Count__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>