force-app/main/default/objects/EFT_Files__c/listViews/All_CCS.listView-meta.xml
<ListView>
    <fullName>All_CCS</fullName>
    <columns>NAME</columns>
    <columns>Cheque_Number__c</columns>
    <columns>Posting_Date__c</columns>
    <columns>Total_Payments_Amount__c</columns>
    <columns>Total_Record_Count__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>EFT_Files__c.CCS_EFT</value>
    </filters>
    <label>All CCS</label>
</ListView>